# little-big-data

./: .gitignore  README.md  SETUP.md  cli.py  config.env.example  debug_storage.py  fetch_strava_data.py  main.py  pyproject.toml  save_strava_to_frontend.py  strava_auth_helper.py  strava_authorize.py  test_zit_integration.py
data/: strava_activity.json
little_big_data/: __init__.py
little_big_data/api/: __init__.py  main.py
little_big_data/api/templates/: index.html
little_big_data/core/: __init__.py  base.py
little_big_data/models/: __init__.py  strava.py
little_big_data/sources/: __init__.py  strava.py  zit.py
little_big_data/storage/: __init__.py  json_storage.py
little_big_data/visualization/: __init__.py  base_plotly.py  plotly_viz.py  strava_plotly.py  zit_plotly.py
tests/: README.md  __init__.py  conftest.py
tests/integration/: __init__.py  test_api.py  test_workflows.py
tests/unit/: __init__.py  test_core.py  test_sources.py  test_storage.py  test_visualization.py
